src/objects/Trail__c.object
<CustomObject>
    <description>Trail information for a park.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>A description of the trail</description>
        <inlineHelpText>A description of the trail</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <description>The trail&apos;s distance</description>
        <inlineHelpText>The trail&apos;s distance</inlineHelpText>
        <label>Distance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Inspection_Date__c</fullName>
        <description>Date of last inspection</description>
        <inlineHelpText>Date of last inspection</inlineHelpText>
        <label>Last Inspection Date</label>
        <type>Date</type>
    </fields>
    <label>Trail</label>
    <nameField>
        <label>Trail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>